--- a/frontend/src/app/dashboard/reportes-modal/reportes-modal.component.html
+++ b/frontend/src/app/dashboard/reportes-modal/reportes-modal.component.html
@@ -81,6 +81,16 @@
                         </mat-option>
                     </mat-autocomplete>
                 </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <mat-label>RUC</mat-label>
+                    <input matInput formControlName="ruc" placeholder="Filtrar por RUC">
+                </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <mat-label>Factura</mat-label>
+                    <input matInput formControlName="factura" placeholder="Filtrar por Factura">
+                </mat-form-field>
             </div>
         </form>
     </div>
